# seebot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: audit-failure.yml  package-curation.yml  rubric-change.yml
.github/workflows/: pages.yml  pilot.yml  reproducibility-gate.yml  schema.yml  test.yml
config/: audit.yaml  awards.yaml  exclusions.yaml  interpretation.yaml  interrogate-standard.toml  perlcritic-standard.rc  pylint-standard.toml  rubric.yaml  ruff-standard.toml
data/: README.md
data/cohort/: candidate-survey.csv  candidate-survey.json  cohort-ranked.csv  cohort-ranked.query.sha256  selected-history.json
data/curation/: abyss-curator.json  abyss-reviewer.json  anarci-curator.json  anarci-reviewer.json  any2fasta-curator.json  any2fasta-reviewer.json  augustus-curator.json  augustus-reviewer.json  bamtools-curator.json  bamtools-reviewer.json  bcftools-curator.json  bcftools-reviewer.json  bowtie-curator.json  bowtie-reviewer.json  bowtie2-curator.json  bowtie2-reviewer.json  cooler-curator.json  cooler-reviewer.json  crisprme-curator.json  crisprme-reviewer.json  cutadapt-curator.json  cutadapt-reviewer.json  cyvcf2-curator.json  cyvcf2-reviewer.json  deeptools-curator.json  deeptools-reviewer.json  dendropy-curator.json  dendropy-reviewer.json  diamond-curator.json  diamond-reviewer.json  dxpy-curator.json  dxpy-reviewer.json  f5c-curator.json  f5c-reviewer.json  famsa-curator.json  famsa-reviewer.json  fastp-curator.json  fastp-reviewer.json  (+102 more)
docs/: agent-workflows.md  assessment-specification.md  cohort.md  data-dictionary.md  hpc-python-expansion.md  limitations.md  mini-pilot-acceptance.md  protocol-changelog.md  protocol.md  references.md  rubric.md
fixtures/: catalog.yaml
schemas/: check-result.schema.json  cohort.schema.json  fixture-catalog.schema.json  manual-review.schema.json  package-manifest.schema.json  profiles.schema.json  project-manifest.schema.json  rankings.schema.json
scripts/: bootstrap.sh  curate_current_cohort.py  curate_next20_expansion.py  curate_popular20_expansion.py  curate_python_expansion.py  fetch_itsxpress_fixtures.py  generate_anndata_fixture.py  generate_paired_read_fixtures.py  generate_rule_metadata.py  generate_structure_fixture.py  prepare_python_expansion.py  run_cohort.sh  run_package.sh  run_pilot.sh  validate_project_evidence.py  validate_release.sh  verify_prepared_bundle.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  (+18 more)
(+193 files in other folders)
